feat: cashbox dashboard with charts, remove i18n, fix model nullability, archive project
- Redesign cashbox embedded view with daily/weekly/monthly reports,
  income/expense summaries, PieChart and BarChart visualizations
- Add stale cashbox warning notification on login
- Remove i18n system (WindowLanguageHolder, lang.properties, lang_en.properties),
  hardcode all UI text in Spanish
- Fix Product.notes nullable constraint (allow null)
- Fix User.param1/param2 to use Double wrapper (accept DB nulls)
- Add V4 Flyway migration to seed default admin user (PIN: 0000)
- Add Flyway repair() before migrate() to handle checksum changes
- Update README: archive notice, prerequisites, default user, developer note

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>